--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,29 +1,36 @@
 {{- /* You can add your own layouts/comments.html to override this file */ -}}
 
-{{- $pageCommentSystems := .Param "pageCommentSystems"}}
+{{- $pageCommentSystems := .Param "pageCommentSystems" }}
 {{- if not $pageCommentSystems }}
   {{- $pageCommentSystems = site.Params.defaultCommentSystems }}
 {{- end }}
 
 {{- $page := . -}}
-{{- with site.Params.commentSystems -}}
-  {{- if $pageCommentSystems.remark42 -}}
-  {{- with .remark42 -}}
-    {{- partial "remark42.html" (dict "page" $page "ctx" .) }}
-  {{- end -}}
-  {{- end -}}
 
-  {{- if $pageCommentSystems.telegramWidget -}}
-  {{- with .telegramWidget -}}
-    {{- partial "telegram_widget.html" . }}
-  {{- end -}}
-  {{- end -}}
+{{- with site.Params.commentSystems }}
 
-  {{- if $pageCommentSystems.disqus -}}
-  {{- with .disqus -}}
-    {{- if $pageCommentSystems.waline -}}
-  {{- with .waline -}}
-    {{- partial "waline.html" . }}
-  {{- end -}}
-  {{- end -}}
-{{- end -}}
+  {{- if $pageCommentSystems.remark42 }}
+    {{- with .remark42 }}
+      {{- partial "remark42.html" (dict "page" $page "ctx" .) }}
+    {{- end }}
+  {{- end }}
+
+  {{- if $pageCommentSystems.telegramWidget }}
+    {{- with .telegramWidget }}
+      {{- partial "telegram_widget.html" . }}
+    {{- end }}
+  {{- end }}
+
+  {{- if $pageCommentSystems.disqus }}
+    {{- with .disqus }}
+      {{- partial "disqus.html" (dict "page" $page "ctx" .) }}
+    {{- end }}
+  {{- end }}
+
+  {{- if $pageCommentSystems.waline }}
+    {{- with .waline }}
+      {{- partial "waline.html" . }}
+    {{- end }}
+  {{- end }}
+
+{{- end }}
