--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -24,13 +24,14 @@
     {{- if not (.Param "hideMeta") }}
     <div class="post-meta">
       {{- partial "post_meta.html" . -}}
+      {{/* TODO move to footer */}}
+      {{/* partial "edit_post.html" . */}}
+      {{/* partial "post_canonical.html" . */}}
     </div>
     {{- end }}
   </header>
-
   {{- $isHidden := .Params.cover.hidden | default site.Params.cover.hiddenInSingle | default site.Params.cover.hidden }}
   {{- partial "cover.html" (dict "cxt" . "IsHome" false "isHidden" $isHidden) }}
-  
   {{- if (.Param "ShowToc") }}
   {{- partial "toc.html" . }}
   {{- end }}
@@ -73,74 +74,3 @@
 </article>
 
 {{- end }}{{/* end main */}}
-
-<!-- 添加支持暗黑模式的样式 -->
-<style>
-  /* 暗黑模式全局样式 */
-  body.dark {
-    background-color: #121212; /* 深色背景 */
-    color: #f8f8f2; /* 白色字体 */
-  }
-
-  /* 文章页面背景和字体颜色 */
-  body.dark .post-single {
-    background-color: #282a36; /* 文章背景 */
-    color: #f8f8f2; /* 白色字体 */
-  }
-
-  /* 标题样式 */
-  body.dark .post-header h1 {
-    color: #ffffff; /* 白色标题 */
-  }
-
-  /* 元数据部分 */
-  body.dark .post-meta {
-    color: #7f7f7f; /* 灰色元数据 */
-  }
-
-  /* 正文部分 */
-  body.dark .post-content {
-    color: #f8f8f2; /* 白色正文 */
-    background-color: #282a36; /* 深色背景 */
-  }
-
-  /* 页脚部分 */
-  body.dark .post-footer {
-    background-color: #282a36;
-    color: #f8f8f2;
-  }
-
-  /* 白天模式样式（如果未启用暗黑模式，则使用白天模式样式） */
-  body:not(.dark) {
-    background-color: #ffffff; /* 白天模式背景 */
-    color: #333333; /* 白天模式文字颜色 */
-  }
-
-  /* 文章页面白天模式背景和字体颜色 */
-  body:not(.dark) .post-single {
-    background-color: #ffffff; /* 文章背景 */
-    color: #333333; /* 黑色字体 */
-  }
-
-  /* 标题样式 */
-  body:not(.dark) .post-header h1 {
-    color: #333333; /* 黑色标题 */
-  }
-
-  /* 元数据部分 */
-  body:not(.dark) .post-meta {
-    color: #666666; /* 灰色元数据 */
-  }
-
-  /* 正文部分 */
-  body:not(.dark) .post-content {
-    color: #333333; /* 黑色正文 */
-    background-color: #ffffff; /* 白天背景 */
-  }
-
-  /* 页脚部分 */
-  body:not(.dark) .post-footer {
-    background-color: #f1f1f1;
-    color: #333333;
-  }
-</style>
