--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -102,41 +102,37 @@
 {{- template "partials/templates/schema_json.html" (dict "page" . "pageTitle" $pageTitle) }}
 
 {{- partial "extend_head.html" . }}
+
 <noscript>
     <style>
         #theme-toggle,
         .top-link {
             display: none;
         }
-
     </style>
-    {{- if (and (ne site.Params.defaultTheme "light") (ne site.Params.defaultTheme "dark")) }}
     <style>
-        @media (prefers-color-scheme: dark) {
-            :root {
-                --theme: rgb(29, 30, 32);
-                --entry: rgb(46, 46, 51);
-                --primary: rgb(218, 218, 219);
-                --secondary: rgb(155, 156, 157);
-                --tertiary-bg: rgb(65, 66, 68);
-                --content: rgb(196, 196, 197);
-                --code-bg: rgb(55, 56, 62);
-                --border: rgb(51, 51, 51);
-            }
-
-            .list-page {
-                background: var(--theme);
-            }
-
-            .list-page:not(.dark)::-webkit-scrollbar-track {
-                background: 0 0;
-            }
-
-            .list-page:not(.dark)::-webkit-scrollbar-thumb {
-                border-color: var(--theme);
-            }
+        /* 强制使用浅色模式 */
+        :root {
+            --theme: rgb(255, 255, 255); /* 浅色模式背景 */
+            --entry: rgb(240, 240, 240);
+            --primary: rgb(29, 30, 32);
+            --secondary: rgb(46, 46, 51);
+            --tertiary-bg: rgb(255, 255, 255);
+            --content: rgb(40, 40, 40);
+            --code-bg: rgb(235, 235, 235);
+            --border: rgb(204, 204, 204);
         }
 
+        .list-page {
+            background: var(--theme);
+        }
+
+        .list-page:not(.dark)::-webkit-scrollbar-track {
+            background: 0 0;
+        }
+
+        .list-page:not(.dark)::-webkit-scrollbar-thumb {
+            border-color: var(--theme);
+        }
     </style>
-    {{- end }}
 </noscript>
