--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -27,20 +27,6 @@
 {{- partial "extend_footer.html" . }}
 
 <script>
-  (function() {
-    /* theme toggle */
-    const disableThemeToggle = '{{ if site.Params.disableThemeToggle }}1{{ end }}' == '1';
-    if (disableThemeToggle) {
-      return;
-    }
-
-    let button = document.getElementById("theme-toggle")
-    // remove the listeners first to prevent adding duplicated listener when history goes back and forth
-    // listen to toggle button
-  })();
-</script>
-
-<script>
   (function () {
     let menu = document.getElementById('menu')
     if (menu) {
@@ -56,7 +42,21 @@
     if (window.matchMedia('(prefers-reduced-motion: reduce)').matches || disableSmoothScroll || enableInstantClick) {
       return;
     }
+
     // only run this code if smooth scroll should be enabled
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+      anchor.addEventListener("click", function (e) {
+        e.preventDefault();
+        var id = this.getAttribute("href").substr(1);
+        document.querySelector(`[id='${decodeURIComponent(id)}']`).scrollIntoView({
+          behavior: "smooth"
+        });
+        if (id === "top") {
+          history.replaceState(null, null, " ");
+        } else {
+          history.pushState(null, null, `#${id}`);
+        }
+      });
     });
   })();
 </script>
@@ -86,14 +86,17 @@
 </script>
 {{- end -}}
 
-
 {{/* Clear ToC Scroll */}}
 <script>
-
+  if (window.scrollListeners) {
+    for (const listener of scrollListeners) {
+      window.removeEventListener('scroll', listener)
+    }
+  }
+  window.scrollListeners = []
 </script>
 
 {{/* Load mediumZoom script */}}
-{{/* It has to be loaded here because of the data-no-instant attribute */}}
 {{- $imagezoom := resources.Get "js/medium-zoom.min.js" }}
 <script src="{{ $imagezoom.RelPermalink }}" data-no-instant
   {{- if site.Params.assets.disableFingerprinting }}integrity="{{ $imagezoom.Data.Integrity }}"{{- end }}
@@ -128,12 +131,6 @@
   {{- if site.Params.assets.disableFingerprinting }}integrity="{{ $instantclick.Data.Integrity }}"{{- end }}
 ></script>
 <script data-no-instant>
-  // http://instantclick.io/scripts
-  // InstantClick.on('change', function(isInitialLoad) {
-  //   if (isInitialLoad) {
-  //     return;
-  //   }
-  // });
   InstantClick.init();
 </script>
 {{- end }}
