--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -27,19 +27,21 @@
 {{- partial "extend_footer.html" . }}
 
 <script>
-  (function() {
+  document.addEventListener("DOMContentLoaded", function() {
     /* theme toggle */
     const disableThemeToggle = '{{ if site.Params.disableThemeToggle }}1{{ end }}' == '1';
     if (disableThemeToggle) {
       return;
     }
 
-    let button = document.getElementById("theme-toggle")
-    // remove the listeners first to prevent adding duplicated listener when history goes back and forth
-    button.removeEventListener('click', toggleThemeListener)
-    // listen to toggle button
-    button.addEventListener('click', toggleThemeListener)
-  })();
+    let button = document.getElementById("theme-toggle");
+    if (button) { // 只有在按钮存在时才操作
+      // remove the listeners first to prevent adding duplicated listener when history goes back and forth
+      button.removeEventListener('click', toggleThemeListener);
+      // listen to toggle button
+      button.addEventListener('click', toggleThemeListener);
+    }
+  });
 </script>
 
 <script>
@@ -100,7 +102,6 @@
   })
 </script>
 {{- end -}}
-
 
 {{/* Clear ToC Scroll */}}
 <script>
