--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -10,8 +10,8 @@
   </span>
   <span style="display: inline-block; margin-left: 1em;">
     Powered by
-    <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
-    <a href="https://github.com/reorx/hugo-PaperModX/" rel="noopener" target="_blank">PaperModX</a>
+    <a href="https://github.com/zoran-sid" rel="noopener noreferrer" target="_blank">Zoran</a></a>
+    
   </span>
 </footer>
 {{- end }}
